# openai_api_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: async.rs  blocking.rs  egui.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  completion.rs  error.rs  lib.rs  model.rs  request.rs
src/request/: chat_completion.rs  completion.rs  edit.rs  text_completion.rs
