[package]
name = "openai_api_rs"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]
license-file = "LICENSE"

[features]
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }

serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"

miette = "5.5.0"
thiserror = "1.0.39"

const_format = "0.2.30"
getset = "0.1.2"

[dev-dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.26.0", features = ["macros"] }

[[example]]
name = "blocking"
required-features = ["blocking"]

[[example]]
name = "async"